<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Аура</string>

    <!-- Шорткаты лаунчера (официальный механизм Android, без Accessibility) -->
    <string name="shortcut_ask_short">Спросить Ауру</string>
    <string name="shortcut_ask_long">Спросить Ауру</string>
    <string name="shortcut_voice_short">Голосом</string>
    <string name="shortcut_voice_long">Спросить Ауру голосом</string>
    <string name="shortcut_task_short">Новая задача</string>
    <string name="shortcut_task_long">Создать задачу</string>
</resources>
